--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
 			<version>3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+
 
 	</dependencies>
 
